--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
   <title>Wesley Huang | Web Developer</title>
 </head>
 <body style="background-color: black; display: flex; justify-content: center; align-items:center">
