--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <title>Wesley Huang | Web Developer</title>
 </head>
-<body style="background-color: black; display: flex; justify-content: center; align-items:center">
-  <h1 style="color:white; font-family:Helvetica, sans-serif; font-size: 75px; font-weight: lighter;">Under Construction</h1>
+<body style="background-color: black; display: flex; justify-content: center; align-items:center; font-family: 'Montserrat', sans-serif;">
+  <h1 style="color:white; font-size: 75px; font-weight: 300; letter-spacing: 8px; text-transform:uppercase;">Under Construction</h1>
 </body>
 </html>
