--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <title>Wesley Huang | Web Developer</title>
 </head>
-<body style="background-color: black; display: flex; justify-content: center; align-items:center; font-family: 'Montserrat', sans-serif;">
-  <h1 style="color:white; font-size: 75px; font-weight: 300; letter-spacing: 8px; text-transform:uppercase;">Under Construction</h1>
+<body id="particles-js">
+  <h1>Under Construction</h1>
+
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script src="particles.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
