--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <a href="#home">home</a>
                             </li>
                             <li>
-                                <a href="#portfolio">Works</a>
+                                <a href="#portfolio">Work</a>
                             </li>
                             <li>
                                 <a href="#services">Service</a>
@@ -484,41 +484,6 @@
 
         <!-- About end -->
 
-        <!-- Twitter start -->
-
-        <section id="twitter" class="module module-gray">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-sm-6 col-sm-offset-3">
-
-                        <div class="module-header wow fadeInUp">
-                            <div class="module-icon">
-                                <span class="icon-social-twitter"></span></div>
-                        </div>
-
-                        <div class="testimonials owl-carousel wow fadeInUp"></div>
-
-                    </div>
-
-                </div>
-                <!-- .row -->
-            </div>
-            <!-- .container -->
-        </section>
-
-        <!-- Twitter end -->
-
-        <!-- Google Map start-->
-
-        <section id="map-section">
-
-            <div id="map"></div>
-
-        </section>
-
-        <!-- Google Map end -->
-
         <!-- Contact start -->
 
         <section id="contact" class="module">
@@ -642,6 +607,9 @@
         <!-- Javascript files -->
 
         <script src="assets/js/jquery-1.11.1.min.js"></script>
+        <script src="assets/js/animated-headline.js"></script>
+        <script src="particles.min.js"></script>
+        <script src="script.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/imagesloaded.pkgd.js"></script>
@@ -652,15 +620,9 @@
         <script src="assets/js/jquery.sticky.js"></script>
         <script src="assets/js/smoothscroll.js"></script>
         <script src="assets/js/wow.min.js"></script>
-        <!-- Google Maps -->
-        <!-- <script src="http://maps.googleapis.com/maps/api/js?key=YOURAPIKEYHERE"></script> -->
-        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <script src="assets/js/gmaps.js"></script>
         <!-- Custom scripts -->
         <script src="assets/js/custom.js"></script>
         <script src="assets/js/custom-shuffle-init.js"></script>
-        <script src="assets/js/animated-headline.js"></script>
-        <script src="particles.min.js"></script>
-        <script src="script.js"></script>
     </body>
 </html>
