add google analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <link rel="shortcut icon" href="img/favicon-1024.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122449348-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-122449348-1');
+  </script>
   <title>Wesley Huang | Web Developer</title>
 </head>
 <body id="particles-js">
