--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <!-- Portfolio Filter end -->
             </div>
             <ul class="portfolio-items-container">
-                <li class="portfolio-item" data-groups="all personal">
+                <li class="portfolio-item" data-groups="all pro">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
                         <figcaption>
@@ -165,21 +165,23 @@
                         </figcaption>
                     </figure>
                 </li>
-                <li class="portfolio-item" data-groups="all pro">
+                <li class="portfolio-item" data-groups="all personal">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
+                        <div class="img" style="background-image: url('/img/portfolio/fanflix.jpg')"></div>
                         <figcaption>
-                            <a href="portfolio/slideshow.html" class="simple-ajax-popup"></a>
+                            <a href="portfolio/fanflix.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
-                                <h3 class="portfolio-item-title">Some work one</h3>
+                                <h3 class="portfolio-item-title">Fanflix</h3>
                                 <div class="portfolio-item-desc">View Project</div>
                             </div>
                         </figcaption>
                     </figure>
                 </li>
-                <li class="portfolio-item" data-groups="all pro">
+                <li class="portfolio-item" data-groups="all personal">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
+                        <div class="img" style="background-image: url('/img/portfolio/instagram.png');"></div>
                         <figcaption>
                             <a href="portfolio/video.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
@@ -192,6 +194,7 @@
                 <li class="portfolio-item" data-groups="all pro">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
+                        
                         <figcaption>
                             <a href="portfolio/image.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
