--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" href="img/favicon-1024.png">
-        <link rel="home" href="http://www.wesleyhuang.co"
+        <link rel="home" href="http://www.wesleyhuang.co">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
+        <link href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css" rel="stylesheet">
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122449348-1"></script>
         <script>
@@ -109,6 +112,7 @@
                     <div class="col-sm-6 col-sm-offset-3">
                         <div class="module-header wow fadeInUp">
                             <h2 class="module-title">My work</h2>
+                            <div class="module-line"></div>
                         </div>
                     </div>
                 </div>
@@ -207,89 +211,86 @@
             </ul>
         </section>
         <!-- Portfolio end -->
-        <!-- Callout start -->
-        <section class="callout">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-lg-6 col-lg-offset-2">
-                        <h2>ARE YOU READY TO START?</h2>
-                        <div class="callout-decription">
-                            I'm currently available for freelance work.
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-lg-2 callout-btn">
-                        <a href="#contact" class="btn btn-lg btn-block btn-custom-1">Contact me</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Callout end -->
         <!-- Services start -->
         <section id="services" class="module module-gray">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
                         <div class="module-header wow fadeInUp">
-                            <h2 class="module-title">Services</h2>
-                            <div class="module-line"></div>
-                            <div class="module-subtitle">
-                                He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.
-                            </div>
+                            <h2 class="module-title">Skills</h2>
                             <div class="module-line"></div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
                                 <span class="icon-trophy"></span>
                             </div>
                             <div class="iconbox-text">
-                                <h3 class="iconbox-title">Logo Design</h3>
-                                <div class="iconbox-desc">
-                                    Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-                                </div>
+                                <h3 class="iconbox-title">HTML</h3>
                             </div>
                         </div>
                       </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
                                 <span class="icon-bubbles"></span>
                             </div>
                             <div class="iconbox-text">
-                                <h3 class="iconbox-title">Marketing</h3>
-                                <div class="iconbox-desc">
-                                    Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-                                </div>
+                                <h3 class="iconbox-title">CSS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
                                 <span class="icon-screen-desktop"></span>
                             </div>
                             <div class="iconbox-text">
-                                <h3 class="iconbox-title">Design</h3>
-                                <div class="iconbox-desc">
-                                    Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-                                </div>
+                                <h3 class="iconbox-title">Javascript</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-2">
+                        <div class="iconbox wow bounceIn">
+                            <div class="iconbox-icon">
+                                <span class="icon-rocket"></span>
+                            </div>
+                            <div class="iconbox-text">
+                                <h3 class="iconbox-title">VueJS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
                                 <span class="icon-rocket"></span>
                             </div>
                             <div class="iconbox-text">
                                 <h3 class="iconbox-title">Branding</h3>
-                                <div class="iconbox-desc">
-                                    Thus, then, one of our own noble stamp, even a whaleman, is the tutelary guardian of England.
-                                </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="iconbox wow bounceIn">
+                            <div class="iconbox-icon">
+                                <span class="icon-rocket"></span>
+                            </div>
+                            <div class="iconbox-text">
+                                <h3 class="iconbox-title">Branding</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                              <span class="icon-rocket"></span>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">Branding</h3>
+                          </div>
                         </div>
                     </div>
                 </div>
