--- a/portfolio/fanflix.html
+++ b/portfolio/fanflix.html
@@ -1,70 +1,58 @@
 <div id="custom-content" class="white-popup-block">
-
 	<div class="row">
 		<div class="col-sm-12 text-center">
-
 			<div class="owl-carousel owl-theme portfolio-slider">
-
 				<!-- Put your slides here -->
-
 				<div class="item">
-					<img src="assets/images/slide1.jpg" alt="">
+					<img src="https://raw.githubusercontent.com/wesleyhuang23/fanflix/master/screenshots/details.png" alt="">
 				</div>
-
+				<div class="item">
+					<img src="https://github.com/wesleyhuang23/fanflix/blob/master/screenshots/emma%20with%20background.png?raw=true" alt="">
+				</div>
+				<div class="item">
+					<img src="https://github.com/wesleyhuang23/fanflix/blob/master/screenshots/googlemaps.png?raw=true" alt="">
+				</div>
 				<div class="item">
 					<img src="/img/portfolio/mobile.png" alt="">
 				</div>
-
 			</div>
-
 		</div><!-- .col -->
 	</div><!-- .row -->
 
 	<div class="popup-content">
 		<div class="row">
-
 			<div class="col-sm-12">
-
 				<div class="popup-header">
 					<h2 class="popup-title">Fanflix</h2>
 					<div class="popup-subtitle">
-						Slideshow
+						Made for Movie Fans
 					</div>
 					<div class="popup-line"></div>
 				</div>
-
 			</div>
-
 		</div>
 
 		<div class="row">
-
 			<div class="col-sm-12">
-				<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will be sorely disappointed. These words are here to provide the reader with a basic impression of how actual text will appear in its final presentation.</p>
-				<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will be sorely disappointed. These words are here to provide the reader with a basic impression of how actual text will appear in its final presentation.</p>
-				<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will be sorely disappointed. These words are here to provide the reader with a basic impression of how actual text will appear in its final presentation.</p>
-				<p>You can preview Startup Framework <a href="#">here</a>.</p>
+				<h3>Features</h3>
+				<p>A Movie database website that allows user to search up to 900,000 movie titles. Searching is done in real time, making a api request on keypress. Users can browse movie detailed pages for every searchable movie, included are trailer, posters, backdrops and recommendations for the movie. Users can search for movie theaters in their area and get showtimes at that theater. When logging in clients will be able to create their own movie list and once added can write a review and give a score for the movie.</p>
+				<p>HTML/CSS | jQuery | AngularJS | NodeJS | Express | SQL | Gulp | OAuth | Heroku</p>
+				<h3>Challenges</h3>
+				<p>The Challenging part about this project was the back-end. Using OAuth in order to have a user ID be tracked with every action the user does so each user can create their own list of movies. Making sure that the back-end was properly connected. Having some properties be global while others be personal made it more overwhelming, but taking my time and tackling one element at a time helped me put this complex part of the project together.</p>
+				<ul class="list-inline">
 			</div>
-
 		</div>
 
 	</div>
 
 	<section class="popup-callout">
 		<div class="row">
-
-			<div class="col-sm-12">
-				<h3>Like Our Works?</h3>
-				<div class="module-line"></div>
-			</div>
-
 			<div class="col-sm-12">
 				<div class="btn-list">
 					<a href="http://www.fanflix.club" class="btn btn-custom-3" target="_blank">View Website</a>
-					<a href="index.html#contact" class="btn btn-custom-4" target="_blank">Start Project</a>
+					<a href="https://github.com/wesleyhuang23/fanflix" class="btn btn-custom-4" target="_blank">Github Code</a>
 				</div>
 			</div>
-
 		</div>
 	</section>
 
