--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
-                                <span class="icon-trophy"></span>
+                              <i class="devicon-html5-plain colored"></i>
                             </div>
                             <div class="iconbox-text">
                                 <h3 class="iconbox-title">HTML</h3>
@@ -236,7 +236,7 @@
                     <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
-                                <span class="icon-bubbles"></span>
+                              <i class="devicon-css3-plain colored"></i>
                             </div>
                             <div class="iconbox-text">
                                 <h3 class="iconbox-title">CSS</h3>
@@ -246,7 +246,7 @@
                     <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
-                                <span class="icon-screen-desktop"></span>
+                              <i class="devicon-javascript-plain colored"></i>
                             </div>
                             <div class="iconbox-text">
                                 <h3 class="iconbox-title">Javascript</h3>
@@ -256,43 +256,154 @@
                     <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
-                                <span class="icon-rocket"></span>
+                              <i class="devicon-jquery-plain colored"></i>
                             </div>
                             <div class="iconbox-text">
-                                <h3 class="iconbox-title">VueJS</h3>
+                                <h3 class="iconbox-title">JQuery</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
-                                <span class="icon-rocket"></span>
+                              <i class="devicon-sass-original colored"></i>
                             </div>
                             <div class="iconbox-text">
-                                <h3 class="iconbox-title">Branding</h3>
+                                <h3 class="iconbox-title">SASS/SCSS</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="iconbox wow bounceIn">
                             <div class="iconbox-icon">
-                                <span class="icon-rocket"></span>
+                              <i class="devicon-webpack-plain colored"></i>
                             </div>
                             <div class="iconbox-text">
-                                <h3 class="iconbox-title">Branding</h3>
+                                <h3 class="iconbox-title">Webpack</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                       <div class="iconbox wow bounceIn">
                           <div class="iconbox-icon">
-                              <span class="icon-rocket"></span>
+                            <img style="width: 50px; height: 50px;" src="https://vuejs.org/images/logo.png" />
                           </div>
                           <div class="iconbox-text">
-                              <h3 class="iconbox-title">Branding</h3>
+                              <h3 class="iconbox-title">VUEJS</h3>
                           </div>
                         </div>
                     </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-react-original colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">REACTJS</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-angularjs-plain colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">AngularJS</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-bootstrap-plain colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">Bootstrap</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicons devicons-responsive"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">Responsive</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-gulp-plain colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">Gulp</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-github-plain colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">GitHub</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-gitlab-plain colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">GitLab</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <img style="width: 50px; height: 50px;" src="/img/apple-touch-icon@2.png" />
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">Craft CMS</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <img style="width: 50px; height: 50px;" src="/img/shopify.svg" />
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">Shopify</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-amazonwebservices-original colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">AWS</h3>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div class="iconbox wow bounceIn">
+                          <div class="iconbox-icon">
+                            <i class="devicon-nodejs-plain colored"></i>
+                          </div>
+                          <div class="iconbox-text">
+                              <h3 class="iconbox-title">NodeJS</h3>
+                          </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
