--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <!-- Bootstrap core CSS -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <!-- Font Awesome CSS -->
-        <link href="assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
-        <!-- Elegant icons CSS -->
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">        <!-- Elegant icons CSS -->
         <link href="assets/css/simple-line-icons.css" rel="stylesheet" media="screen">
         <!--[if lte IE 7]> <script src="assets/js/icons-lte-ie7.js"></script> <![endif]-->
         <!-- Magnific-popup lightbox -->
@@ -151,7 +150,7 @@
                         <figcaption>
                             <a href="portfolio/video.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
-                                <h3 class="portfolio-item-title">Some work one</h3>
+                                <h3 class="portfolio-item-title">The Learning Accelerator</h3>
                                 <div class="portfolio-item-desc">View Project</div>
                             </div>
                         </figcaption>
@@ -163,7 +162,7 @@
                         <figcaption>
                             <a href="portfolio/image.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
-                                <h3 class="portfolio-item-title">Some work one</h3>
+                                <h3 class="portfolio-item-title">Workstate</h3>
                                 <div class="portfolio-item-desc">View Project</div>
                             </div>
                         </figcaption>
@@ -189,7 +188,7 @@
                         <figcaption>
                             <a href="portfolio/video.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
-                                <h3 class="portfolio-item-title">Some work one</h3>
+                                <h3 class="portfolio-item-title">Instagram clone</h3>
                                 <div class="portfolio-item-desc">View Project</div>
                             </div>
                         </figcaption>
@@ -202,7 +201,7 @@
                         <figcaption>
                             <a href="portfolio/image.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
-                                <h3 class="portfolio-item-title">Some work one</h3>
+                                <h3 class="portfolio-item-title">Currant</h3>
                                 <div class="portfolio-item-desc">View Project</div>
                             </div>
                         </figcaption>
@@ -534,27 +533,12 @@
                         <ul class="social-links">
                             <li>
                                 <a href="#" class="wow fadeInUp">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="wow fadeInUp" data-wow-delay=".1s">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="wow fadeInUp" data-wow-delay=".2s">
-                                    <i class="fa fa-google-plus"></i>
+                                    <i class="fa fa-instagram"></i>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="wow fadeInUp" data-wow-delay=".3s">
                                     <i class="fa fa-linkedin"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="wow fadeInUp" data-wow-delay=".4s">
-                                    <i class="fa fa-pinterest"></i>
                                 </a>
                             </li>
                             <li>
@@ -585,13 +569,11 @@
         <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/imagesloaded.pkgd.js"></script>
         <script src="assets/js/jquery.shuffle.min.js"></script>
-        <script src="assets/js/twitterFetcher.js"></script>
         <script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/jquery.fitvids.js"></script>
         <script src="assets/js/jquery.sticky.js"></script>
         <script src="assets/js/smoothscroll.js"></script>
         <script src="assets/js/wow.min.js"></script>
-        <script src="assets/js/gmaps.js"></script>
         <!-- Custom scripts -->
         <script src="assets/js/custom.js"></script>
         <script src="assets/js/custom-shuffle-init.js"></script>
