new projects and photos

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <body>
         <!-- Home start -->
         <section id="particles-js" class="module-image js-height-half home" >
+            <div id="home"></div>
             <div class="intro">
                 <div class="hello"></div>
                 <h1>Wesley Huang</h1>
@@ -89,7 +90,7 @@
                                 <a href="#portfolio">Work</a>
                             </li>
                             <li>
-                                <a href="#services">Service</a>
+                                <a href="#services">Skills</a>
                             </li>
                             <li>
                                 <a href="#about">About</a>
@@ -196,10 +197,10 @@
                 </li>
                 <li class="portfolio-item" data-groups="all pro">
                     <figure>
-                        <img src="assets/images/portfolio-item.jpg" alt="">
-                        
+                        <img src="/img/currant/Screen Shot 2018-07-18 at 4.30.04 PM.png" alt="">
+                        <div class="img" style="background-image: url('/img/currant/Screen Shot 2018-07-18 at 4.30.04 PM.png');"></div>
                         <figcaption>
-                            <a href="portfolio/image.html" class="simple-ajax-popup"></a>
+                            <a href="portfolio/currant.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
                                 <h3 class="portfolio-item-title">Currant</h3>
                                 <div class="portfolio-item-desc">View Project</div>
@@ -479,6 +480,8 @@
                                     </div>
                                 </div>
                             </div>
+                            <p >MY PROFESSIONAL RESUME: <a href="#" target="_blank" style="cursor: pointer;">Click Here</a><p>
+
                         </div>
                     </div>
                 </div>
@@ -500,28 +503,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3">
-                        <form id="contact-form" role="form">
-                            <div class="ajax-hidden">
-                                <div class="form-group wow fadeInUp">
-                                    <label class="sr-only" for="c_name">Name</label>
-                                    <input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
-                                </div>
-                                <div class="form-group wow fadeInUp" data-wow-delay=".1s">
-                                    <label class="sr-only" for="c_email">Email address</label>
-                                    <input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
-                                </div>
-                                <div class="form-group wow fadeInUp" data-wow-delay=".2s">
-                                    <textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Your message"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-block btn-custom-2 wow fadeInUp" data-wow-delay=".3s">Send it
-                                </button>
-                            </div>
-                            <div class="ajax-response"></div>
-                        </form>
-                    </div>
-                </div>
             </div>
         </section>
         <!-- Contact end -->
@@ -537,12 +518,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="wow fadeInUp" data-wow-delay=".3s">
+                                <a href="https://www.linkedin.com/in/huangwesley/" target="_blank" class="wow fadeInUp" data-wow-delay=".3s">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="wow fadeInUp" data-wow-delay=".5s">
+                                <a href="mailto:wesleyhuang23@gmail.com" target="_blank" class="wow fadeInUp" data-wow-delay=".5s">
                                     <i class="fa fa-envelope"></i>
                                 </a>
                             </li>
@@ -564,7 +545,6 @@
         <script src="assets/js/jquery-1.11.1.min.js"></script>
         <script src="assets/js/animated-headline.js"></script>
         <script src="particles.min.js"></script>
-        <script src="script.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/imagesloaded.pkgd.js"></script>
