--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <!-- Google / Search Engine Tags -->
         <meta itemprop="name" content="Wesley Huang | Web Developer">
         <meta itemprop="description" content="">
-        <meta itemprop="image" content="">
+        <meta itemprop="image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="http://www.wesleyhuang.co">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Wesley Huang | Web Developer">
         <meta property="og:description" content="">
-        <meta property="og:image" content="">
+        <meta property="og:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
         <!-- Bootstrap core CSS -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <!-- Font Awesome CSS -->
@@ -136,6 +136,7 @@
                 <li class="portfolio-item" data-groups="all pro">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
+                        <div class="img" style="background-image: url('/img/os/Screen Shot 2018-07-19 at 12.55.09 PM.png')"></div>
                         <figcaption>
                             <a href="portfolio/slideshow.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
@@ -148,6 +149,7 @@
                 <li class="portfolio-item" data-groups="all pro">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
+                        <div class="img" style="background-image: url('/img/tla/Screen Shot 2018-07-19 at 1.00.38 PM.png')"></div>
                         <figcaption>
                             <a href="portfolio/video.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
@@ -160,6 +162,7 @@
                 <li class="portfolio-item" data-groups="all pro">
                     <figure>
                         <img src="assets/images/portfolio-item.jpg" alt="">
+                        <div class="img" style="background-image: url('/img/workstate/Screen Shot 2018-07-19 at 1.01.34 PM.png')"></div>
                         <figcaption>
                             <a href="portfolio/image.html" class="simple-ajax-popup"></a>
                             <div class="caption-inner">
@@ -535,12 +538,7 @@
                 </div>
             </div>
         </footer>
-        <!-- Footer end -->
-        <div class="scroll-up">
-            <a href="#home">
-                <i class="fa fa-angle-double-up"></i>
-            </a>
-        </div>        
+    
         <!-- Javascript files -->
         <script src="assets/js/jquery-1.11.1.min.js"></script>
         <script src="assets/js/animated-headline.js"></script>
