new script files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Wesley Huang</title>
+    <title>Wesley Huang | Web Developer</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122449348-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122449348-1');
+    </script>
+    <meta name="application-name" content="Wesley Huang | Web Developer"/>
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Wesley Huang | Web Developer">
+    <meta itemprop="description" content="">
+    <meta itemprop="image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://www.wesleyhuang.co">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Wesley Huang | Web Developer">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,9 +43,6 @@
     <link href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="magnific-popup/magnific-popup.css">
     <link href="css/agency.css" rel="stylesheet">
-
-
-
 </head>
 
 <body id="page-top" class="index">
@@ -696,12 +713,13 @@
             </div>
         </div>
     </div>
-
+    <script src="particles.min.js"></script>
+    <script src="assets/js/animated-headline.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/agency.min.js"></script>
-
+    <script src="js/agency.js"></script>
+  
 </body>
 
 </html>
